--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,31 @@
 {
-  "extends": "@react-native/typescript-config/tsconfig.json"
+	"compilerOptions": {
+		"typeRoots": ["./src/types"],
+		"target": "esnext",
+		"module": "commonjs",
+		"lib": ["es2017"],
+		"allowJs": false,
+		"jsx": "react-native",
+		"noEmit": true,
+		"isolatedModules": true,
+		"strict": true,
+		"moduleResolution": "node",
+		"baseUrl": ".",
+		"paths": {
+			"src": ["."],
+			"src/*": ["src/*"]
+		},
+		"allowSyntheticDefaultImports": true,
+		"esModuleInterop": true,
+		"skipLibCheck": false,
+		"resolveJsonModule": true
+	},
+	"include": ["src/**/*.tsx", "src/**/*.ts", "src/app.tsx"],
+	"exclude": [
+		"node_modules",
+		"babel.config.js",
+		"metro.config.js",
+		"jest.config.js",
+		"env.d.ts"
+	]
 }
