--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
 		"doctor": "npx react-native doctor"
 	},
 	"dependencies": {
+		"@hookform/resolvers": "^3.3.4",
 		"@react-native-async-storage/async-storage": "^1.22.3",
 		"@react-navigation/native": "^6.1.16",
 		"@react-navigation/native-stack": "^6.9.25",
 		"axios": "^1.6.7",
 		"react": "18.2.0",
+		"react-hook-form": "^7.51.1",
 		"react-native": "0.73.6",
 		"react-native-dotenv": "^3.4.11",
 		"react-native-modal": "^13.0.1",
@@ -27,6 +29,7 @@
 		"react-native-screens": "^3.29.0",
 		"react-native-svg": "^15.1.0",
 		"react-native-svg-transformer": "^1.3.0",
+		"yup": "^1.4.0",
 		"zustand": "^4.5.2"
 	},
 	"devDependencies": {
@@ -55,7 +58,7 @@
 		"metro-react-native-babel-preset": "^0.77.0",
 		"prettier": "2.8.8",
 		"react-test-renderer": "18.2.0",
-		"typescript": "5.0.4"
+		"typescript": "^5.4.3"
 	},
 	"engines": {
 		"node": ">=18"
