--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 	"dependencies": {
 		"@hookform/resolvers": "^3.3.4",
 		"@react-native-async-storage/async-storage": "^1.22.3",
+		"@react-navigation/bottom-tabs": "^6.5.20",
 		"@react-navigation/native": "^6.1.16",
 		"@react-navigation/native-stack": "^6.9.25",
 		"@reduxjs/toolkit": "^2.2.2",
@@ -30,6 +31,7 @@
 		"react-native-screens": "^3.29.0",
 		"react-native-svg": "^15.1.0",
 		"react-native-svg-transformer": "^1.3.0",
+		"react-native-vector-icons": "^10.0.3",
 		"react-redux": "^9.1.0",
 		"redux": "^5.0.1",
 		"redux-logger": "^3.0.6",
@@ -46,6 +48,7 @@
 		"@react-native/typescript-config": "0.73.1",
 		"@types/node": "^20.11.30",
 		"@types/react": "^18.2.6",
+		"@types/react-native-vector-icons": "^6.4.18",
 		"@types/react-test-renderer": "^18.0.0",
 		"@types/redux-logger": "^3.0.13",
 		"babel-jest": "^29.6.3",
