--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"redux": "^5.0.1",
 		"redux-logger": "^3.0.6",
 		"redux-persist": "^6.0.0",
+		"socket.io-client": "^4.7.5",
 		"yup": "^1.4.0"
 	},
 	"devDependencies": {
